--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "miragejs": "^0.1.46",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
